moved huggingface, fixing black top on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,14 @@ body {
   background-color: #1A1A1A;
 }
 
+html, body {
+  height: 100%;
+}
+
+body {
+  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
